deploy/bases/redis/redis-page-cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-page-cache
  labels:
    app: redis
    role: page-cache
spec:
  selector:
    app: redis
    role: page-cache
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-page-cache
spec:
  selector:
    matchLabels:
      app: redis
      role: page-cache
  serviceName: redis-page-cache
  template:
    metadata:
      labels:
        app: redis
        role: page-cache
    spec:
      containers:
      - name: redis
        image: redis:8.0.2@sha256:b43d2dcbbdb1f9e1582e3a0f37e53bf79038522ccffb56a25858969d7a9b6c11
        imagePullPolicy: IfNotPresent
        args:
        - --maxmemory
        - 1024mb
        - --maxmemory-policy
        - allkeys-lru
        readinessProbe:
          exec:
            command: ["redis-cli", "ping"]
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          exec:
            command: ["redis-cli", "ping"]
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 5
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 50m
            memory: 512Mi
